--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,13 @@
   height:30px;
 }
 
+
+.contentForm{
+  background-color:transparent;
+  color:white;
+  border:none;
+  font-family: 'Raleway', sans-serif;
+}
 /***************************************** Inventory **********************************************/
 .inventory{
   
