added github button image

--- a/src/App.css
+++ b/src/App.css
@@ -195,3 +195,11 @@
   color:darkgrey;
   margin-bottom:0;
 }
+
+.github{
+  width:50px;
+  height:50px;
+  border:solid 0px transparent;
+  background-color:transparent;
+}
+
